# tried-bd-moduels-2025

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
Resources/: my_plugin_ui.xml
Source/: PluginEditor.cpp  PluginEditor.h
Tools/: split_filmstrip.ts
